# Loomer

./: .gitignore  CMakeLists.txt  Loomer.pro  README.md
.github/workflows/: qodana_code_quality.yml
AndroidClient/: CMakeLists.txt  main.cpp
AndroidClient/assets/: flags.qrc
AndroidClient/assets/images/: ukr.avif
AndroidClient/qml/: Main.qml  qml.qrc
AndroidClient/qml/components/: CountrySelector.qml
AndroidClient/qml/pages/: LoginPage.qml  PasswordPage.qml  RegisterPage.qml
Client/: Client.pro  Makefile  Makefile.Debug  Makefile.Release  config.h  config.json  customwidgetitem.cpp  customwidgetitem.h  customwidgetitem_stile.h  enums.h  getpath.cpp  getpath.h  m_pack.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  ui_mainwindow.h
Client/.qtc_clangd/: compile_commands.json
Client/.qtc_clangd/.cache/clangd/index/: QListWidget.D5623C5BCA067DCA.idx  QStringBuilder.AC23FA234F826E41.idx  QTimer.351D00238CFF1C22.idx  main.cpp.20232CA069831A32.idx  mainwindow.cpp.16D005D447C0EE86.idx  mainwindow.h.5CF54E75838BBE31.idx  qbasictimer.h.18079442F0ACB2FF.idx  qdeadlinetimer.h.31922C08212D69CE.idx  qflags.h.57D8CA99F9FDD05E.idx  qlayout.h.6D11B0909AB7BE21.idx  qlayoutitem.h.24DE6B8DA9AA5BB8.idx  qmetatype.h.423823D52A9D9532.idx  qnativeinterface.h.7CCD5AAC8E972D78.idx  qobject.h.D9D23B2298ADE13A.idx  qobjectdefs.h.F9475B70D9FC04BE.idx  qshareddata.h.927133D042379E54.idx  qtclasshelpermacros.h.58AEE99A28652FE2.idx  qtimer.h.AF737B100F849EC3.idx  qtmetamacros.h.89D9AF00AFF746AE.idx  qtypeinfo.h.66B04B83A7BAD86B.idx  qurl.h.1E761CC56A13BA7A.idx  qwidget.h.B0D986D2ED4ABA9C.idx  ui_mainwindow.h.C2FDAF9876FD2C3B.idx
Client/debug/: moc_mainwindow.cpp
Client/styles/: style.qss
ClientDesktop/: CMakeLists.txt  Mpack.cpp  Mpack.hpp  RegWindow.cpp  RegWindow.h  RegWindow.ui  ServerConnector.cpp  ServerConnector.h  UserData.cpp  UserData.h  config.cpp  config.h  config.json  customwidgetitem.cpp  customwidgetitem.h  enums.h  getpath.h  m_pack.cpp  m_pack.h  main.cpp  mainwindow.cpp  mainwindow.h  serverconnector.cpp  serverconnector.h  userdata.cpp  userdata.h
ClientDesktop/styles/: item_style.qss  style.qss
Core/: CMakeLists.txt  Mpack.cpp  Mpack.hpp
Server/: CMakeLists.txt  Config.cpp  Config.hpp  Server.pro  Server.pro.user.66eb412  Server.pro.user.83a8ded  cliendatabase.cpp  cliendatabase.h  config.json  enums.h  m_pack.cpp  main.cpp  sending.cpp  sending.h  server.cpp  server.h  setcomunication.cpp  setcomunication.h
